fixed input buton

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -16,7 +16,7 @@
       <ion-card-title>Ingrese Total</ion-card-title>
       <ion-item>
         <ion-input
-          type="text"
+          type="number"
           color="secondary"
           placeholder="0"
           [value]="totalDinero"
